Fix white spaces around sub-heading etc.
These white spaces should be calculated from default leading.

--- a/src/css/baseline.css
+++ b/src/css/baseline.css
@@ -56,6 +56,10 @@ p {
 	margin-top: 1.618rem;
 }
 
+h3 + p {
+	margin-top: 0.136rem;
+}
+
 hr {
 	border-width: 0;
 	color: silver;
