--- a/src/css/content/metaline.css
+++ b/src/css/content/metaline.css
@@ -5,11 +5,18 @@
 	line-height: var(--line-height-small);
 }
 
-.metaline:nth-child(n + 2) {
-	margin-top: 0;
-}
-
 .header .metaline {
 	margin-top: 8.717rem;
 	margin-top: var(--space-huge);
+}
+
+h2 + .metaline {
+	--margin-top: calc(
+		(var(--font-size-default) * var(--line-height-default) - var(--font-size-default)) -
+		(var(--font-size-huge) * var(--line-height-small) - var(--font-size-huge)) / 2 -
+		(var(--font-size-small) * var(--line-height-small) - var(--font-size-small)) / 2
+	);
+
+	margin-top: 0.291rem;
+	margin-top: var(--margin-top);
 }
