--- a/src/css/core.css
+++ b/src/css/core.css
@@ -47,15 +47,19 @@ h3 {
 	margin-top: var(--space-large);
 }
 
-h3 + p {
-	--margin-top: calc((var(--font-size-default) * var(--line-height-default) - var(--font-size-large) * var(--line-height-small)) / 2);
-
-	margin-top: var(--margin-top);
-}
-
 /* Grouping Content */
 p {
 	margin-top: var(--space-default);
+}
+
+h3 + p {
+	--margin-top: calc(
+		(var(--font-size-default) * var(--line-height-default) - var(--font-size-default)) -
+		(var(--font-size-large) * var(--line-height-small) - var(--font-size-large)) / 2 -
+		(var(--font-size-default) * var(--line-height-default) - var(--font-size-default)) / 2
+	);
+
+	margin-top: var(--margin-top);
 }
 
 hr {
