--- a/src/css/header/tagline.css
+++ b/src/css/header/tagline.css
@@ -9,11 +9,18 @@
 	max-width: var(--width-main);
 }
 
+.metaline + .tagline {
+	--margin-top: calc(
+		(var(--font-size-default) * var(--line-height-default) - var(--font-size-default)) -
+		(var(--font-size-default) * var(--line-height-small) - var(--font-size-default)) / 2 -
+		(var(--font-size-small) * var(--line-height-small) - var(--font-size-small)) / 2
+	);
+
+	margin-top: 0.375rem;
+	margin-top: var(--margin-top);
+}
+
 .tagline[title]::after {
 	content: "—" attr(title);
 	font-weight: normal;
-}
-
-.metaline + .tagline {
-	margin-top: 0;
 }
